--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,12 @@
     <string name="btn_xyz_reader_app">XYZ READER</string>
     <string name="btn_capstone_app">CAPSTONE: MY OWN APP</string>
 
+    <!-- Toast messages for the apps -->
+    <string name="toast_spotify_streamer_app">This button will launch my spotify streamer app!</string>
+    <string name="toast_scores_app">This button will launch my scores app!</string>
+    <string name="toast_library_app">This button will launch my library app!</string>
+    <string name="toast_build_it_bigger_app">This button will launch my build it bigger app!</string>
+    <string name="toast_xyz_reader_app">This button will launch my xyz reader app!</string>
+    <string name="toast_capstone_app">This button will launch my capstone app!</string>
+
 </resources>
