--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,20 +1,18 @@
 <resources>
-    <string name="app_name">MyAppPortfolio</string>
-
-    <string name="activity_name">My App Portfolio</string>
-    <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Settings</string>
+    <string name="app_name">AppFolio</string>
 
     <!-- Label for text view displaying title -->
-    <string name="tv_title">My Nanodegree Apps!</string>
+    <string name="tv_title">My Android Apps!</string>
 
     <!-- Labels for buttons that will launch the apps -->
-    <string name="btn_spotify_streamer_app">SPOTIFY STREAMER</string>
-    <string name="btn_scores_app">SCORES APP</string>
-    <string name="btn_library_app">LIBRARY APP</string>
-    <string name="btn_build_it_bigger_app">BUILD IT BIGGER</string>
-    <string name="btn_xyz_reader_app">XYZ READER</string>
-    <string name="btn_capstone_app">CAPSTONE: MY OWN APP</string>
+    <string name="label_btn_modern_art">MODERN ART</string>
+    <string name="label_btn_popular_movies">POPULAR MOVIES</string>
+    <string name="label_btn_alexandria">ALEXANDRIA</string>
+    <string name="label_btn_football_scores">FOOTBALL SCORES</string>
+    <string name="label_btn_build_it_bigger">BUILD IT BIGGER</string>
+    <string name="label_btn_xyz_reader">XYZ READER</string>
+    <string name="label_btn_go_ubiquitous">GO UBIQUITOUS</string>
+    <string name="label_btn_news_bytes">NEWS BYTES</string>
 
     <!-- Toast messages for the apps -->
     <string name="toast_spotify_streamer_app">This button will launch my spotify streamer app!</string>
